# Quirk

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  main.rs  qr_types.rs  ui.rs
