[package]
name = "quirk"
version = "1.0.2"
edition = "2021"
rust-version = "1.75"
description = "Quirk - a rich, cross-platform QR code generator built with egui"
authors = ["Quirk Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RobESco/Quirk"
readme = "README.md"
keywords = ["qr", "qrcode", "egui", "generator"]
categories = ["gui", "graphics"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.29"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "bmp",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = { version = "0.14", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
